tests/test_enum/bad/output/ambiguous_cases.catala_en.A.Interpret
[ERROR] This constructor name is ambiguous, it can belong to E or F. Desambiguate it by prefixing it with the enum name.

  --> tests/test_enum/bad/ambiguous_cases.catala_en
   | 
14 |   definition e equals Case1
   |                       ^^^^^
   + Article
